--- a/front-end/html/homepage.html
+++ b/front-end/html/homepage.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin>
 <h1>Hello World</h1>
-
 </body>
